# amberfish

./: .gitignore  LICENSE  Makefile  README.md  configure.in
doc/: Makefile.in  af.1  afclose.3  afgetresultmd.3  afopen.3  afsearch.3  afsortdocid.3  afsortscore.3  amberfish.texi
src/: Makefile.in  admin.c  admin.h  af.c  af.h  afd.c  afdmain.cc  afmain.cc  afw.h  config.h.in  defs.h  docbuf.c  docbuf.h  erc.c  erc.h  err.c  err.h  explain.c  explain.h  fdef.c  fdef.h  girs-afd.c  index.c  index.h  info.c  info.h  io.h  linbuf.c  linbuf.h  linear.c  linear.h  lock.c  lock.h  log.c  log.h  open.c  open.h  scan.c  scan.h  search.c  (+11 more)
